# meltano-state-backend-snowflake

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yaml  test.yaml
fixtures/only_uri/: meltano.yml
fixtures/project/: meltano.yml
src/meltano_state_backend_snowflake/: backend.py
tests/: test_backend.py
