[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling", "hatch-vcs" ]

[project]
name = "meltano-state-backend-snowflake"
dynamic = [ "version" ]
description = "Meltano State Backend for Snowflake"
license = "MIT"
license-files = [
  "LICENSE",
]
authors = [
  { name = "Taylor Murphy", email = "taylor@arch.dev" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "meltano>=3.7",
  "snowflake-connector-python>=4,<5",
]

[project.urls]
Documentation = "https://github.com/meltano/meltano-state-backend-snowflake"
Source = "https://github.com/meltano/meltano-state-backend-snowflake"
Issues = "https://github.com/meltano/meltano-state-backend-snowflake/issues"

[project.entry-points."meltano.settings"]
snowflake_account = "meltano_state_backend_snowflake.backend:SNOWFLAKE_ACCOUNT"
snowflake_database = "meltano_state_backend_snowflake.backend:SNOWFLAKE_DATABASE"
snowflake_password = "meltano_state_backend_snowflake.backend:SNOWFLAKE_PASSWORD"
snowflake_role = "meltano_state_backend_snowflake.backend:SNOWFLAKE_ROLE"
snowflake_schema = "meltano_state_backend_snowflake.backend:SNOWFLAKE_SCHEMA"
snowflake_user = "meltano_state_backend_snowflake.backend:SNOWFLAKE_USER"
snowflake_warehouse = "meltano_state_backend_snowflake.backend:SNOWFLAKE_WAREHOUSE"
snowflake_private_key_base64 = "meltano_state_backend_snowflake.backend:SNOWFLAKE_PRIVATE_KEY_BASE64"

[project.entry-points."meltano.state_backends"]
snowflake = "meltano_state_backend_snowflake.backend:SnowflakeStateStoreManager"

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "tests" },
  { include-group = "types" },
]
lint = [
  "ruff>=0.15",
]
tests = [
  "coverage[toml]>=7.13",
  "pytest>=9",
]
types = [
  { include-group = "tests" },
  "mypy>=1.19",
  "ty>=0.0.14",
]

[tool.hatch.version]
fallback-version = "0.0.0.dev0"
source = "vcs"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "A",    # flake8-builtins
  "ANN",  # flake8-annotations
  "ARG",  # flake8-unused-arguments
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "COM",  # flake8-commas
  "D",    # pydocstyle/flake8-docstrings
  "DTZ",  # flake8-datetimez
  "E",    # pycodestyle (error)
  "EM",   # flake8-errmsg
  "ERA",  # flake8-eradicate
  "F",    # pyflakes
  "FA",   # flake8-future-annotations
  "FBT",  # flake8-boolean-trap
  "G",    # flake8-logging-format
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "INP",  # flake8-no-pep420
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "N",    # pep8-naming
  "PERF", # Perflint
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "Q",    # flake8-quotes
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # Ruff specific rules
  "S",    # flake8-bandit
  "SIM",  # flake8-simplify
  "T10",  # flake8-debugger
  "T20",  # flake8-print
  "TC",   # flake8-type-checking
  "TID",  # flake8-tidy-imports
  "UP",   # pyupgrade
  "W",    # pycodestyle (warning)
  "YTT",  # flake8-2020
]
ignore = [
  "COM812", # Handled by the Ruff formatter
  "ISC001", # Handled by the Ruff formatter
]
per-file-ignores."tests/**" = [
  "D1",
  "INP",  # Don't require __init__.py files in tests directories
  "S101", # Allow 'assert' in tests
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true
suppress-dummy-args = true

[tool.ruff.lint.flake8-pytest-style]
parametrize-values-type = "tuple"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest]
addopts = [
  "--durations=10",
  "-ra",
  "--strict-config",
  "--strict-markers",
]
filterwarnings = [
  "error",
  "once:The 'version' field in meltano.yml is deprecated:DeprecationWarning",
]
log_level = "INFO"
minversion = "9"
testpaths = ["tests"]
xfail_strict = true

[tool.coverage.paths]
package = [
  "src/meltano_state_backend_snowflake/",
  "*/site-packages/meltano_state_backend_snowflake/",
]

[tool.coverage.run]
branch = true
source = [
  "meltano_state_backend_snowflake",
  "tests",
]
parallel = true
relative_files = true

[tool.coverage.report]
exclude_also = [
  '''if (t\.)?TYPE_CHECKING:''',
]
fail_under = 100

[tool.tox]
min_version = "4.22"
requires = [ "tox", "tox-uv" ]
env_list = [
  "types",
  "lint",
  "3.14",
  "3.13",
  "3.12",
  "3.11",
  "3.10",
  "coverage",
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
dependency_groups = [ "tests" ]
commands = [ [ "coverage", "run", "-m", "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.coverage]
depends = [
  "3.10",
  "3.11",
  "3.12",
  "3.13",
  "3.14",
]
dependency_groups = [ "tests" ]
commands = [
  [ "coverage", "combine", "--debug=pathmap" ],
  [ "coverage", "report", "--show-missing" ],
  [ "coverage", "xml" ],
]

[tool.tox.env.lint]
dependency_groups = [ "lint" ]
skip_install = true
commands = [
  [ "ruff", "check", "--fix", "--show-fixes", "--exit-non-zero-on-fix" ],
  [ "ruff", "format", "--exit-non-zero-on-format" ],
]

[tool.tox.env.types]
dependency_groups = [ "tests", "types" ]
commands = [
  [
    "mypy",
    { replace = "posargs", default = [
      "src/meltano_state_backend_snowflake",
      "tests",
    ], extend = true },
  ],
  [
    "ty",
    "check",
    { replace = "posargs", default = [
      "src/meltano_state_backend_snowflake",
      "tests",
    ], extend = true },
  ],
]

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
follow_untyped_imports = true
strict = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ty.rules]
unused-type-ignore-comment = "ignore"
